hydroflow/tests/compile-fail/surface_use_bad2.stderr
error: expected `;`
 --> tests/compile-fail/surface_use_bad2.rs:7:20
  |
7 |         source_iter(0..10) -> for_each(std::mem::drop);
  |                    ^
